--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Veebilehe projekt</title>
+    <title>Veebilehe projekti algvisioon</title>
 </head>
 <body>
 
