--- a/esileht/esileht.html
+++ b/esileht/esileht.html
@@ -22,7 +22,7 @@
             <p>Ujulad</p>
         </div>
         <div>
-            <img src="tartu_kesklinn.png" alt="Tartu linn">
+            <img src="esileht.png" alt="Tartu linn">
         </div>
         
     </main>
