proov teise kaardiga

--- a/lehed/esileht.html
+++ b/lehed/esileht.html
@@ -15,7 +15,7 @@
     <main>
         <div class="button-container">
             <button class="button" onclick="button('jalgpallivaljakud.html')" >Jalgpalliväljakud</button>
-            <button class="button">Korvpalliväljakud</button>
+            <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
             <button class="button">Tenniseväljakud</button>
             <button class="button">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
