--- a/lehed/korvpallivaljakud.html
+++ b/lehed/korvpallivaljakud.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/jalgpallivaljakud.css">
+    <link rel="stylesheet" href="/stiilid/korvpallivaljakud.css">
     <title>Veebilehe projekt</title>
     <script src="/js/script.js"></script>
 </head>
@@ -14,8 +14,8 @@
 
     <main>
         <div class="button-container">
-            <button class="button" onclick="button('esileht.html')" >Jalgpalliväljakud</button>
-            <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
+            <button class="button" onclick="button('jalgpallivaljakud.html')">Jalgpalliväljakud</button>
+            <button class="button" onclick="button('esileht.html')" ></button>>Korvpalliväljakud</button>
             <button class="button">Tenniseväljakud</button>
             <button class="button">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
@@ -23,7 +23,7 @@
             <button class="button">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/jalgpallivaljakud.png" alt="Tartu linn">
+            <img src="/pildid/korvpallivaljakud.png" alt="Tartu linn">
         </div>
         <div id="map-container">
             <div class="location-marker" style="top: 11px; left: -75px;" data-info="Nimi: Aadress: Koduleht: "></div>
