--- a/lehed/korvpallivaljakud.html
+++ b/lehed/korvpallivaljakud.html
@@ -16,7 +16,7 @@
         <div class="button-container">
             <button class="button" onclick="button('jalgpallivaljakud.html')">Jalgpalliväljakud</button>
             <button class="button" onclick="button('esileht.html')" >Korvpalliväljakud</button>
-            <button class="button">Tenniseväljakud</button>
+            <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
