--- a/lehed/tennisevaljakud.html
+++ b/lehed/tennisevaljakud.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/esileht.css">
+    <link rel="stylesheet" href="/stiilid/tennisevaljakud.css">
     <title>Veebilehe projekt</title>
     <script src="/js/script.js"></script>
 </head>
@@ -16,16 +16,22 @@
         <div class="button-container">
             <button class="button" onclick="button('jalgpallivaljakud.html')" >Jalgpalliväljakud</button>
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
-            <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
+            <button class="button" onclick="button('esileht.html')">Tenniseväljakud</button>
             <button class="button">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
             <button class="button">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/esileht.png" alt="Tartu linn">
+            <img src="/pildid/tennisevoimalused.png" alt="Tartu linn">
         </div>
-        
+        <div id="map-container">
+            <div class="location-marker" style="top: 11px; left: -75px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="info-box" id="info-box">
+                <p id="info-text"></p>
+            </div>
+        </div>
+    
     </main>
 
 </body>
