--- a/lehed/tennisevaljakud.html
+++ b/lehed/tennisevaljakud.html
@@ -17,7 +17,7 @@
             <button class="button" onclick="button('jalgpallivaljakud.html')" >Jalgpalliväljakud</button>
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
             <button class="button" onclick="button('esileht.html')">Tenniseväljakud</button>
-            <button class="button">Välijõusaalid</button>
+            <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
             <button class="button">Ujulad</button>
