--- a/lehed/jalgpallivaljakud.html
+++ b/lehed/jalgpallivaljakud.html
@@ -16,8 +16,8 @@
         <div class="button-container">
             <button class="button" onclick="button('esileht.html')" >Jalgpalliväljakud</button>
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
-            <button class="button">Tenniseväljakud</button>
-            <button class="button">Välijõusaalid</button>
+            <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
+            <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
             <button class="button">Ujulad</button>
