--- a/lehed/valijousaal.html
+++ b/lehed/valijousaal.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/korvpallivaljakud.css">
+    <link rel="stylesheet" href="/stiilid/valijousaal.css">
     <title>Veebilehe projekt</title>
     <script src="/js/script.js"></script>
 </head>
@@ -15,22 +15,20 @@
     <main>
         <div class="button-container">
             <button class="button" onclick="button('jalgpallivaljakud.html')">Jalgpalliväljakud</button>
-            <button class="button" onclick="button('esileht.html')" >Korvpalliväljakud</button>
+            <button class="button" onclick="button('korvpallivaljakud.html')" >Korvpalliväljakud</button>
             <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
-            <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
+            <button class="button" onclick="button('esileht.html')">Välijõusaalid</button>
             <button class="button">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
             <button class="button">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/korvpallivaljakud.png" alt="Tartu linn">
+            <img src="/pildid/valijousaalid.png" alt="Tartu linn">
         </div>
         <div id="map-container">
             <div class="location-marker" style="top: 132px; left: -166px;" data-info="Nimi: Raatuse Kooli väliväljakud Aadress: Raatuse 88a Koduleht: https://shorturl.at/jknAS  "></div>
             <div class="location-marker" style="top: 556px; left: -169px;" data-info="Nimi: Karlova kooli väliväljak Aadress: Lina 1-5, 50103 Tartu Koduleht: Puudub"></div>
-            <div class="location-marker" style="top: 416px; left: -640px;" data-info="Nimi: Miina Härma Gümnaasiumi väliväljakud Aadress: Jaan Tõnissoni 3, 50409 Tartu Koduleht: https://shorturl.at/ovGU3 " "></div>
-            <div class="location-marker" style="top: 558px; left: -507px;" data-info="Nimi: Mart Reiniku Kooli väliväljak Aadress: Tartu Mart Reiniku Kooli liikuma kutsuv hoov, Riia 25a, 51010 Tartu  Koduleht: https://shorturl.at/pBIL5 "></div>
-            <div class="location-marker" style="top: 299px; left: 30px;" data-info="Nimi: Puškini kooli väliväljakud Aadress: Uus 54, 50606 Tartu Koduleht: https://shorturl.at/dozW1"></div>
+    
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
