--- a/lehed/esileht.html
+++ b/lehed/esileht.html
@@ -18,7 +18,7 @@
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
             <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
-            <button class="button">Kergejõustik</button>
+            <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
             <button class="button">Ujulad</button>
         </div>
