--- a/lehed/kergejoustik.html
+++ b/lehed/kergejoustik.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/tennisevaljakud.css">
+    <link rel="stylesheet" href="/stiilid/kergejoustik.css">
     <title>Veebilehe projekt</title>
     <script src="/js/script.js"></script>
 </head>
@@ -16,14 +16,14 @@
         <div class="button-container">
             <button class="button" onclick="button('jalgpallivaljakud.html')" >Jalgpalliväljakud</button>
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
-            <button class="button" onclick="button('esileht.html')">Tenniseväljakud</button>
+            <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
-            <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
+            <button class="button" onclick="button('esileht.html')">Kergejõustik</button>
             <button class="button">Jõusaalid</button>
             <button class="button">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/tennisevoimalused.png" alt="Tartu linn">
+            <img src="/pildid/kergejõustik.png" alt="Tartu linn">
         </div>
         <div id="map-container">
             <div class="location-marker" style="top: 11px; left: -75px;" data-info="Nimi: Aadress: Koduleht: "></div>
