koik, ilma locationita

--- a/lehed/jalgpallivaljakud.html
+++ b/lehed/jalgpallivaljakud.html
@@ -19,8 +19,8 @@
             <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
             <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
-            <button class="button">Jõusaalid</button>
-            <button class="button">Ujulad</button>
+            <button class="button" onclick="button('jousaalid.html')">Jõusaalid</button>
+            <button class="button" onclick="button('ujulad.html')">Ujulad</button>
         </div>
         <div>
             <img src="/pildid/jalgpallivaljakud.png" alt="Tartu linn">
