--- a/lehed/jousaalid.html
+++ b/lehed/jousaalid.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/kergejoustik.css">
+    <link rel="stylesheet" href="/stiilid/jousaalid.css">
     <title>Veebilehe projekt</title>
     <script src="/js/script.js"></script>
 </head>
@@ -18,12 +18,12 @@
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
             <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
-            <button class="button" onclick="button('esileht.html')">Kergejõustik</button>
-            <button class="button" onclick="button('jousaalid.html')">Jõusaalid</button>
+            <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
+            <button class="button" onclick="button('esileht.html')">Jõusaalid</button>
             <button class="button" onclick="button('ujulad.html')">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/kergejõustik.png" alt="Tartu linn">
+            <img src="/pildid/jõusaalid-.png" alt="Tartu linn">
         </div>
         <div id="map-container">
             <div class="location-marker" style="top: 35px; left: -365px;" data-info="Nimi: Aadress: Koduleht: "></div>
