--- a/lehed/tennisevaljakud.html
+++ b/lehed/tennisevaljakud.html
@@ -19,14 +19,14 @@
             <button class="button" onclick="button('esileht.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
             <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
-            <button class="button">Jõusaalid</button>
-            <button class="button">Ujulad</button>
+            <button class="button" onclick="button('jousaalid.html')">Jõusaalid</button>
+            <button class="button" onclick="button('ujulad.html')">Ujulad</button>
         </div>
         <div>
             <img src="/pildid/tennisevoimalused.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 11px; left: -75px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 304px; left: -571px;" data-info="Nimi: Aadress: Koduleht: "></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
