--- a/lehed/ujulad.html
+++ b/lehed/ujulad.html
@@ -2,7 +2,7 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/kergejoustik.css">
+    <link rel="stylesheet" href="/stiilid/ujulad.css">
     <title>Veebilehe projekt</title>
     <script src="/js/script.js"></script>
 </head>
@@ -18,15 +18,15 @@
             <button class="button" onclick="button('korvpallivaljakud.html')">Korvpalliväljakud</button>
             <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('valijousaal.html')">Välijõusaalid</button>
-            <button class="button" onclick="button('esileht.html')">Kergejõustik</button>
+            <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
             <button class="button" onclick="button('jousaalid.html')">Jõusaalid</button>
-            <button class="button" onclick="button('ujulad.html')">Ujulad</button>
+            <button class="button" onclick="button('esileht.html')">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/kergejõustik.png" alt="Tartu linn">
+            <img src="/pildid/ujulad.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 35px; left: -365px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 419px; left: -184px;" data-info="Nimi: Aadress: Koduleht: "></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
