--- a/lehed/valijousaal.html
+++ b/lehed/valijousaal.html
@@ -19,16 +19,16 @@
             <button class="button" onclick="button('tennisevaljakud.html')">Tenniseväljakud</button>
             <button class="button" onclick="button('esileht.html')">Välijõusaalid</button>
             <button class="button" onclick="button('kergejoustik.html')">Kergejõustik</button>
-            <button class="button">Jõusaalid</button>
-            <button class="button">Ujulad</button>
+            <button class="button" onclick="button('jousaalid.html')">Jõusaalid</button>
+            <button class="button" onclick="button('ujulad.html')">Ujulad</button>
         </div>
         <div>
             <img src="/pildid/valijousaalid.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 132px; left: -166px;" data-info="Nimi: Raatuse Kooli väliväljakud Aadress: Raatuse 88a Koduleht: https://shorturl.at/jknAS  "></div>
-            <div class="location-marker" style="top: 556px; left: -169px;" data-info="Nimi: Karlova kooli väliväljak Aadress: Lina 1-5, 50103 Tartu Koduleht: Puudub"></div>
-    
+            <div class="location-marker" style="top: 3px; left: -234px;" data-info="Nimi: Aadress: Koduleht:"></div>
+            <div class="location-marker" style="top: 613px; left: -227px;" data-info="Nimi: Aadress: Koduleht:"></div>
+            <div class="location-marker" style="top: 429px; left: 11px;" data-info="Nimi: Aadress: Koduleht:"></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
