koik text boxid timm

--- a/lehed/jalgpallivaljakud.html
+++ b/lehed/jalgpallivaljakud.html
@@ -26,10 +26,10 @@
             <img src="/pildid/jalgpallivaljakud.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 11px; left: -75px;" data-info="Nimi: Aadress: Koduleht: "></div>
-            <div class="location-marker" style="top: 614px; left: -242px;" data-info="Nimi: Aadress: Koduleht: "></div>
-            <div class="location-marker" style="top: 552px; left: -490px;" data-info="Nimi: Aadress: Koduleht: "></div>
-            <div class="location-marker" style="top: 771px; left: -547px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 11px; left: -75px;" data-info="Jalgpalliväljak - Kasarmu 10"></div>
+            <div class="location-marker" style="top: 614px; left: -242px;" data-info="Jalgpalliväljak - Eha 41 "></div>
+            <div class="location-marker" style="top: 552px; left: -490px;" data-info="Mart Reiniku spordiväljak - Riia tn 25a"></div>
+            <div class="location-marker" style="top: 771px; left: -547px;" data-info="Tamme staadion - Tamme puiestee 1 "></div>
     
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
