--- a/lehed/jousaalid.html
+++ b/lehed/jousaalid.html
@@ -26,7 +26,11 @@
             <img src="/pildid/jõusaalid-.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 35px; left: -365px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 35px; left: -403px;" data-info="Tartu Ülikooli Akadeemiline Spordiklubi - Ujula 4a"></div>
+            <div class="location-marker" style="top: 355px; left: -363px;" data-info="MyFitness Tartu Kesklinn - Küüni 7"></div>
+            <div class="location-marker" style="top: 154px; left: -310px;" data-info="Lemon Gym Tartu - Narva mnt 27a"></div>
+            <div class="location-marker" style="top: 365px; left: -255px;" data-info="Gym! Tasku - Turu 2"></div>
+            <div class="location-marker" style="top: 412px; left: -200px;" data-info="Turu tn Spordihoone - Turu 8 "></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
