--- a/lehed/kergejoustik.html
+++ b/lehed/kergejoustik.html
@@ -26,7 +26,7 @@
             <img src="/pildid/kergejõustik.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 35px; left: -365px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 35px; left: -365px;" data-info="Tartu Ülikooli Akadeemiline Spordiklubi - Ujula 4a "></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
