--- a/lehed/tennisevaljakud.html
+++ b/lehed/tennisevaljakud.html
@@ -26,7 +26,7 @@
             <img src="/pildid/tennisevoimalused.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 304px; left: -571px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 304px; left: -571px;" data-info="Tartu Akadeemiline tenniseklubi - K. E. von Baeri 6 "></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
