--- a/lehed/ujulad.html
+++ b/lehed/ujulad.html
@@ -26,7 +26,7 @@
             <img src="/pildid/ujulad.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 419px; left: -184px;" data-info="Nimi: Aadress: Koduleht: "></div>
+            <div class="location-marker" style="top: 419px; left: -184px;" data-info="Aura Veekeskus - Turu 10 "></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
