--- a/lehed/valijousaal.html
+++ b/lehed/valijousaal.html
@@ -26,9 +26,9 @@
             <img src="/pildid/valijousaalid.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 3px; left: -234px;" data-info="Nimi: Aadress: Koduleht:"></div>
-            <div class="location-marker" style="top: 613px; left: -227px;" data-info="Nimi: Aadress: Koduleht:"></div>
-            <div class="location-marker" style="top: 429px; left: 11px;" data-info="Nimi: Aadress: Koduleht:"></div>
+            <div class="location-marker" style="top: 3px; left: -234px;" data-info="Peetri välijõusaal - Peetri 80"></div>
+            <div class="location-marker" style="top: 613px; left: -227px;" data-info="Karlova Kooli välijõusaal - Lina 2"></div>
+            <div class="location-marker" style="top: 429px; left: 11px;" data-info="Anne kanali välijõusaal - Pikk 65"></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
