--- a/lehed/korvpallivaljakud.html
+++ b/lehed/korvpallivaljakud.html
@@ -26,11 +26,12 @@
             <img src="/pildid/korvpallivaljakud.png" alt="Tartu linn">
         </div>
         <div id="map-container">
-            <div class="location-marker" style="top: 132px; left: -166px;" data-info="Nimi: Raatuse Kooli väliväljakud Aadress: Raatuse 88a Koduleht: https://shorturl.at/jknAS  "></div>
-            <div class="location-marker" style="top: 556px; left: -169px;" data-info="Nimi: Karlova kooli väliväljak Aadress: Lina 1-5, 50103 Tartu Koduleht: Puudub"></div>
-            <div class="location-marker" style="top: 416px; left: -640px;" data-info="Nimi: Miina Härma Gümnaasiumi väliväljakud Aadress: Jaan Tõnissoni 3, 50409 Tartu Koduleht: https://shorturl.at/ovGU3 " "></div>
-            <div class="location-marker" style="top: 558px; left: -507px;" data-info="Nimi: Mart Reiniku Kooli väliväljak Aadress: Tartu Mart Reiniku Kooli liikuma kutsuv hoov, Riia 25a, 51010 Tartu  Koduleht: https://shorturl.at/pBIL5 "></div>
-            <div class="location-marker" style="top: 299px; left: 30px;" data-info="Nimi: Puškini kooli väliväljakud Aadress: Uus 54, 50606 Tartu Koduleht: https://shorturl.at/dozW1"></div>
+            <div class="location-marker" style="top: 132px; left: -166px;" data-info="Raatuse Kooli väliväljakud - Raatuse 88a"></div>
+
+            <div class="location-marker" style="top: 556px; left: -169px;" data-info="Karlova kooli väliväljak - Lina 1-5"></div>
+            <div class="location-marker" style="top: 416px; left: -640px;" data-info="Miina Härma Gümnaasiumi väliväljakud - Jaan Tõnissoni 3"></div>
+            <div class="location-marker" style="top: 558px; left: -507px;" data-info="Mart Reiniku Kooli väliväljak - Riia 25a"></div>
+            <div class="location-marker" style="top: 299px; left: 30px;" data-info="Puškini kooli väliväljakud - Uus 54"></div>
             <div class="info-box" id="info-box">
                 <p id="info-text"></p>
             </div>
