--- a/lehed/esileht.html
+++ b/lehed/esileht.html
@@ -2,9 +2,9 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/esileht.css">
+    <link rel="stylesheet" href="/intro_to_cs_veebileht/stiilid/esileht.css">
     <title>Veebilehe projekt</title>
-    <script src="/js/script.js"></script>
+    <script src="/intro_to_cs_veebileht/js/script.js"></script>
 </head>
 <body>
 
@@ -23,7 +23,7 @@
             <button class="button" onclick="button('ujulad.html')">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/esileht.png" alt="Tartu linn">
+            <img src="/intro_to_cs_veebileht/pildid/esileht.png" alt="Tartu linn">
         </div>
         
     </main>
