--- a/lehed/jalgpallivaljakud.html
+++ b/lehed/jalgpallivaljakud.html
@@ -2,9 +2,9 @@
 <html lang="ee">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stiilid/jalgpallivaljakud.css">
+    <link rel="stylesheet" href="/intro_to_cs_veebileht/stiilid/jalgpallivaljakud.css">
     <title>Veebilehe projekt</title>
-    <script src="/js/script.js"></script>
+    <script src="/intro_to_cs_veebileht/js/script.js"></script>
 </head>
 <body>
 
@@ -23,7 +23,7 @@
             <button class="button" onclick="button('ujulad.html')">Ujulad</button>
         </div>
         <div>
-            <img src="/pildid/jalgpallivaljakud.png" alt="Tartu linn">
+            <img src="/intro_to_cs_veebileht/pildid/jalgpallivaljakud.png" alt="Tartu linn">
         </div>
         <div id="map-container">
             <div class="location-marker" style="top: 11px; left: -75px;" data-info="Jalgpalliväljak - Kasarmu 10"></div>
